# langchain_project

./: README.md  main.py  pyproject.toml
data/: 2012_Chris_Mayer.json  2013_Chris_Mayer.json  2014_Chris_Mayer.json  2015_Chris_Mayer.json  2016_Chris_Mayer.json  2017_Chris_Mayer.json  2018_Chris_Mayer.json  2019_Chris_Mayer.json  2020_Chris_Mayer.json  2021_Chris_Mayer.json  2022_Chris_Mayer.json  2023_Chris_Mayer.json
